# forge

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  RELEASE_NOTES.md  forge.recipe.toml
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml
docs/: cbox-format.md  dependencies.md  design.md  recipe-schema.md  workflows.md  workspaces.md
examples/: README.md
examples/empty-project/: README.md
examples/executable/: README.md  forge.recipe.toml  main.cpp  message.cpp  message.h
examples/header-only/: README.md  forge.recipe.toml
examples/header-only/include/forge_example/: greeting.h
examples/imported-library/: README.md  forge.recipe.toml
examples/published-core-cbox/: README.md
examples/real-world-ecosystem/: README.md
examples/sibling-cbox/: README.md
examples/sibling-cbox/answer/: forge.recipe.toml
examples/sibling-cbox/app/: forge.recipe.toml  main.cpp
examples/static-library/: README.md  forge.recipe.toml
examples/static-library/include/forge_example/: arithmetic.h
examples/static-library/src/: arithmetic.cpp
examples/workspace/: README.md  forge.workspace.toml
examples/workspace/answer/src/: answer.cpp
examples/workspace/app/: forge.recipe.toml
forge.xcodeproj/: project.pbxproj
forge.xcodeproj/xcshareddata/xcschemes/: forge.xcscheme
schemas/: forge.recipe.schema.json  forge.workspace.schema.json
scripts/: sync-version.sh
src/: box.cpp  box.h  box_manifest.cpp  box_manifest.h  build.cpp  build.h  bump.cpp  bump.h  clean.cpp  clean.h  cli.cpp  cli.h  cli_support.cpp  cli_support.h  file_support.cpp  file_support.h  fprocess.cpp  fprocess.h  github.cpp  github.h  init.cpp  init.h  init_cmake.cpp  init_cmake.h  init_support.cpp  init_support.h  init_visual_studio.cpp  init_visual_studio.h  init_xcode.cpp  init_xcode.h  main.cpp  new.cpp  new.h  process.cpp  process.h  recipe.cpp  recipe.h  release.cpp  release.h  run.cpp  (+14 more)
tests/: CMakeLists.txt  aggregate_box_e2e_test.cpp  box_test.cpp  build_test.cpp  cli_test.cpp  release_test.cpp  run_test.cpp  test_support.h  test_test.cpp  workspace_test.cpp
